# mastr

./: .dockerignore  .gitattributes  .gitignore  Areas.ipynb  Dockerfile  Dockerfile.datasette.dockerignore  LICENSE  README.md  datasette.Dockerfile  datasette.Dockerfile.dockerignore  export.geojson  fix_ewkb.go  fly.toml  go.mod  go.sum  leaflet.html  metadata.yaml  multipolygons-area.sql  osmconf.ini  points.ini  preprocess.sql  pyproject.toml  remake  run  script.py  settings.json  shell.nix
analysis/: script.py
cmd/: main.go
config/: default.vcl  fly.toml  rclone.conf
graphql/: Notes.md  docker-compose.yaml  metadata.json
internal/: fields.go  hasura.go  recorder.go  sqlite.go  unused.go  validator.go  xml_reader.go  xml_source.go
mastr/: .gitignore  AnlagenEegBiomasse.yaml  AnlagenEegBiomasse.yml  AnlagenEegSolar.yaml  AnlagenEegSolar.yml  AnlagenEegWasser.yaml  AnlagenEegWind.yaml  AnlagenEegWind.yml  AnlagenStromSpeicher.yaml  EinheitenBiomasse.yaml  EinheitenBiomasse.yml  EinheitenSolar-points.sql  EinheitenSolar.jq  EinheitenSolar.sql  EinheitenSolar.xsd  EinheitenSolar.yaml  EinheitenSolar.yml  EinheitenStromSpeicher.yaml  EinheitenStromSpeicher.yml  EinheitenWasser.yaml  EinheitenWasser.yml  EinheitenWind.yaml  EinheitenWind.yml  JQ.mustache  Katalogkategorien.yml  Katalogwerte.yaml  Katalogwerte.yml  Lokationen.yaml  Makefile  Marktakteure.Makefile  Marktakteure.jq  Marktakteure.sql  Marktakteure.xsd  Marktakteure.yaml  Marktakteure.yml  Marktstammdatenregister-1.0.1-Probleme.md  Monthly.sql  PostgreSQL.mustache  Report.de.html.mustache  (+7 more)
(+162 files in other folders)
